@@ -1,14 +1,20 @@
 Revision history for Perl extension AnyEvent.
 
-TODO: fix start_read documentation
+	- AnyEvent::DNS only followed cname chains with length 2,
+          contrary to documentation. bumped it up to 10, thanks to
+          microsoft, the current broken-dns-config-king.
 	- fix queue management logic in AnyEvent::Handle:
           when on_read was registered, the queue was empty
           and no progress could be made AnyEvent::Handle would
           enter an endless loop.
         - correctly start reading again when the handle became
           busy again after idling.
+        - correctly treat tls shut-downs as EOF condition
+          (for the time being, would be nice to have a callback for that).
         - correctly call eof callback under all conditions
           (hopefully).
+        - the timeout callback did not expect that $self can go
+          away any time.
 
 4.12 Tue Jun  3 10:58:04 CEST 2008
 	- include AnyEvent::Intro, a tutorial for anyevent,
